//
// @create by czl
// @brief 通信协议错误码
//
syntax = "proto3";
package bs_czl;

message MSG_RET {
    enum ErrCode {
        SUCCESS = 0;
        FAIL = -1;
    }
}